# hashcode_2020

./: Makefile  meson.build
2020/: CMakeLists.txt  dump.hh  heuristic.cc  heuristic.hh  main.cc  parse.hh  score.hh  struct.hh  test.cc
test_2017/: CMakeLists.txt  main.cc  output.cc  output.hh  parser.cc  parser.hh  struct.hh  utils.cc  utils.hh
test_2019/: dump.hh  main.cc  parse.cc  parse.hh  photo.hh  score.hh
